# RaspMusicStation

./: README.md  User Mannual.docx
Binaries/: OMXHost  OMXHostStarter.sh  OMXRemoteController.apk  RaspMusicStationClient.apk  RaspMusicStationServer  RaspMusicStationServerStarter.sh  RaspMusicStationServer_old  omxbyteplayer  omxcdplayer  omxdirplayer  updatepod.sh
Binaries/web/: index.html  listlists.html  listsongs.html  playcd.html
OMXHost/src/: CMakeLists.txt  FeiSocket.cpp  main.cpp
OMXRemoteController/: .project  AndroidManifest.xml
OMXRemoteController/res/layout/: activity_main.xml
OMXRemoteController/res/menu/: main.xml
OMXRemoteController/res/values/: strings.xml
RaspMusicStationClient/: .cproject  .project  AndroidManifest.xml  gradle.properties  import-summary.txt  local.properties
RaspMusicStationClient/app/: build.gradle
RaspMusicStationClient/app/src/main/: AndroidManifest.xml
RaspMusicStationClient/jni/: Android.mk  RaspMusicStationClient.cpp
RaspMusicStationClient/res/layout/: activity_main.xml
RaspMusicStationClient/res/menu/: main.xml
RaspMusicStationClient/res/values/: strings.xml
RaspMusicStationServer/src/: CMakeLists.txt  FeiSocket.cpp  FeiSocket.h  GetIP.h  RaspMusicStationPlayer.cpp  RaspMusicStationServer.cpp  common.cpp  common.h
RaspMusicStationWebServer/src/: CMakeLists.txt  FeiSocket.h  RaspMusicStationPlayer.cpp  RaspMusicStationServer.cpp  common.cpp  common.h
omxbyteplayer/src/: CMakeLists.txt  SoundCodec.h  audioplay.h  main.cpp  playbuffer.cpp
omxcdplayer/: pi-toolchain.cmake
omxcdplayer/src/: AudioCD.cpp  AudioCD.h  AudioCD_Play.cpp  CMakeLists.txt  audio.c  hackConsole.h  main.cpp  omxcdplayer.cpp
omxdirplayer/src/: CMakeLists.txt  common.cpp  common.h  main.cpp  omxdirplayer.cpp
(+4 files in other folders)
